@@ -5,6 +5,7 @@
   * Added generated method to return text for a table
   * Added generated method to return text for an unordered list
   * Added generated method to return text for an ordered list
+  * Added divs class level method to return all elements matching the locator
 === 2017-01-09
 * Enhancement
   * Added params class instance variable to hold hash values that can be used in the page
